--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "orchestra/testbench": "^9.5",
         "laravel/pint": "^1.8",
         "pestphp/pest": "^3.2",
-        "pestphp/pest-plugin-laravel": "^3.0"
+        "pestphp/pest-plugin-laravel": "^3.0",
+        "mockery/mockery": "^1.6"
     },
     "autoload": {
         "psr-4": {
